--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-widgets": "^4.5.0",
     "react-youtube": "^7.11.1",
     "reactstrap": "^6.5.0",
+    "remove-markdown": "^0.3.0",
     "resolve": "1.8.1",
     "rss-parser": "^3.7.6",
     "rword": "^3.1.1",
