--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "youtube-info": "^1.3.2"
   },
   "scripts": {
-    "start": "NODE_PATH=. node scripts/start.js",
+    "start": "BROWSER=no NODE_PATH=. node scripts/start.js",
     "server": "NODE_PATH=. nodemon -r esm server/websocket-server.js",
     "admin": "node scripts/start-admin.js",
     "build": "GENERATE_SOURCEMAP=false NODE_PATH=. node scripts/build.js",
