--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "node-url-shortener": "^1.0.1",
     "nodemailer": "latest",
     "npm": "^6.14.3",
+    "open-graph-scraper": "^4.7.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
@@ -174,6 +175,7 @@
     "babel-plugin-wildcard": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "get-youtube-id": "^1.0.1",
     "helmet": "^3.21.3",
     "ismounted": "^0.1.6",
     "md5": "^2.2.1",
