--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "node-url-shortener": "^1.0.1",
     "nodemailer": "latest",
     "npm": "^6.14.3",
+    "open-graph": "^0.2.4",
     "open-graph-scraper": "^4.7.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "passport": "^0.4.1",
