--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "moment": "^2.23.0",
     "mongoose": "^5.9.5",
     "node-html-parser": "^1.2.13",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "node-telegram-bot-api": "^0.40.0",
     "node-url-shortener": "^1.0.1",
     "nodemailer": "latest",
@@ -107,6 +107,7 @@
     "react-loopback": "^0.4.0",
     "react-markdown": "^4.3.1",
     "react-multiselect-checkboxes": "^0.1.1",
+    "react-player": "^2.9.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^3.1.0",
@@ -123,6 +124,7 @@
     "resolve": "1.8.1",
     "rss-parser": "^3.7.6",
     "rword": "^3.1.1",
+    "sass": "^1.42.1",
     "sass-loader": "7.1.0",
     "shorturl": "0.0.3",
     "socks5-https-client": "^1.2.1",
